--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ jupyter_core==5.3.0
 kiwisolver==1.4.4
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
+missingno==0.5.2
 nest-asyncio==1.5.6
 numpy==1.24.3
 packaging==23.1
